Verif/Test/Invalide/test_erreur_3.72-24.deca
// Description:
//    Programme soulevant l'erreur (3.72)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'String' sont incompatibles avec l'opérateur binaire '*' (règle 3.72)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

float i;
{
   i = 1 * "a";
}